Add find schools by uni id api
